# ezpresso

./: .gitignore  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
config/: sso-permission-sets.yaml
diagrams/: ezpresso_architecture.drawio
pipeline/: pipeline.py  stage.py
policies/: PowerUserAccess.json
scripts/: get-org-hierarchy.py  get-sso-group-mappings.py
sso/: account_structure.py  group_mappings.py  permission_sets.py  permission_sets_stack.py
tests/unit/: test_account_structure.py  test_group_mappings.py  test_permission_sets_stack.py
utility/: cfn_helpers.py  file_helpers.py
